Remove code from error paragraph

--- a/payment/index.html
+++ b/payment/index.html
@@ -59,7 +59,7 @@
           <li>
             <label for="name">Name on Card</label>
             <input type="text" id="name" name="cardname" placeholder="Tomawa Ayorinde" required="required" autocomplete="cc-name"/>
-            <p class="error"> attr(data-before) </p>
+            <p class="error"> </p>
           </li>
           <li>
             <label for="number">Card Number</label>
