Change Cart button name to menu

--- a/cart/index.html
+++ b/cart/index.html
@@ -28,8 +28,8 @@
           </li>
         </ul>
       </nav>
-      <button type="button" class="nothide">Cart</button>
-      <button aria-hidden="true" type="button" class="hide">Cart</button>
+      <button type="button" class="nothide">Menu</button>
+      <button aria-hidden="true" type="button" class="hide">Menu</button>
     </header>
     <main id="cart">
       <nav class="hide" aria-hidden="true">
