--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           </li>
         </ul>
       </nav>
-      <button class="nothide" type="button">Cart</button>
-      <button aria-hidden="true" type="button" class="hide">Cart</button>
+      <button class="nothide" type="button">Menu</button>
+      <button aria-hidden="true" type="button" class="hide">Menu</button>
     </header>
     <main id="home">
       <nav class="hide" aria-hidden="true">
