--- a/index.html
+++ b/index.html
@@ -54,6 +54,52 @@
           </li>
         </ul>
       </nav>
+      <ul><!-- Make individual filter red if  the input is invalid also delete the number if it's over bound then make the tab red then display error-->
+        <li id="close-filter">
+          <button>
+            - Close filter
+          </button>
+        </li>
+        <li id="category-filter">
+          <label for="categories">Categories</label>
+          <select name="categories">
+            <option value="volvo">Volvo</option>
+            <option value="saab">Saab</option>
+            <option value="mercedes">Mercedes</option>
+            <option value="audi">Audi</option>
+          </select>
+        </li>
+        <li id=price-filter>
+          <fieldset><!-- Semantic: We will use fieldset to group the more than one input together-->
+            <legend> Price Range: </legend>
+            <!-- before should be the dollar sign --><input type="number" placeholder="350"/><!-- after should be a dash -->
+            <!-- before should be the dollar sign --><input type="number" placeholder="350"/>
+          </fieldset>
+        </li>
+        <li id="size-filter">
+          <label>Size</label>
+          <input type="number" placeholder="12" />
+          <!-- Accessibility: We will use US measuring system instead of British(Nigeria's) -->
+        </li>
+        <li id="material-filter">
+          <label for="categories">Material</label>
+          <select name="categories">
+            <option value="volvo">Volvo</option>
+            <option value="saab">Saab</option>
+            <option value="mercedes">Mercedes</option>
+            <option value="audi">Audi</option>
+          </select>
+        </li>
+        <li id="discounts-filter">
+          <label for="categories">Discounts</label>
+          <select name="categories">
+            <option value="volvo">Volvo</option><!-- 20% below -->
+            <option value="saab">Saab</option><!-- 40% below -->
+            <option value="mercedes">Mercedes</option>
+            <option value="audi">Audi</option>
+          </select>
+        </li>
+      </ul>
       <ol id="product-list" aria-label="Products">
 
       </ol>
