--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <button aria-hidden="true" type="button" class="hide">Menu</button>
     </header>
     <main id="home">
+      <button>Advanced filter</button>
       <nav class="hide" aria-hidden="true">
         <ul>
           <li>
@@ -54,7 +55,7 @@
           </li>
         </ul>
       </nav>
-      <ul><!-- Make individual filter red if  the input is invalid also delete the number if it's over bound then make the tab red then display error-->
+      <ul id="filter" ><!-- Make individual filter red if  the input is invalid also delete the number if it's over bound then make the tab red then display error-->
         <li id="close-filter">
           <button>
             - Close filter
@@ -71,7 +72,7 @@
         </li>
         <li id=price-filter>
           <fieldset><!-- Semantic: We will use fieldset to group the more than one input together-->
-            <legend> Price Range: </legend>
+            <legend> Price Range </legend>
             <!-- before should be the dollar sign --><input type="number" placeholder="350"/><!-- after should be a dash -->
             <!-- before should be the dollar sign --><input type="number" placeholder="350"/>
           </fieldset>
