Define item grid layout
Co-authored-by: @pmithapara <pmithapara@users.noreply.github.com>
Co-authored-by: @Juno-Explorer1 <Juno-Explorer1@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
       <ol id="product-list" aria-label="Products">
 
       </ol>
+      <ol id="item-grid" aria-label="Items">
+        <li>
+          <img src="img_girl.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <button>Add to Cart</button>
+        </li>
+      </ol>
     </main>
     <footer>
 
