Wrap img with figure for semantics and styling
Co-authored-by: @pmithapara <pmithapara@users.noreply.github.com>
Co-authored-by: @Juno-Explorer1 <Juno-Explorer1@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
       </ol>
       <ol id="item-grid" aria-label="Items">
         <li>
-          <img src="img_girl.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
           <button>Add to Cart</button>
