Add dummy items to fill item-grid
Co-authored-by: @pmithapara <pmithapara@users.noreply.github.com>
Co-authored-by: @Juno-Explorer1 <Juno-Explorer1@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -111,6 +111,262 @@
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
+          <button>Add to Cart</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Shirt</p>
+          <p>$240</p>
+          <a href="#"><p>
+            Nike Shirt is a premium wool woven bla bla bla bla bla bla bla bla bla bla bla bla bla bla
+          </p></a>
           <button>Add to Cart</button>
         </li>
       </ol>
