--- a/cart/index.html
+++ b/cart/index.html
@@ -56,7 +56,24 @@
       </nav>
       <section id="shopping-cart">
         <h4>Cart</h4>
-
+        <ul>
+          <li>
+            <figure>
+              <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            </figure>
+            <p>Nike Shirt</p>
+            <p>$240</p>
+            <ul>
+              <li><a href="#">Vintage</a></li>
+              <li><a href="#">Shirt</a></li>
+              <li><a href="#">Athletic</a></li>
+              <li><a href="#">Silk</a></li>
+            </ul>
+            <button>+</button>
+            <input type="number" />
+            <button>-</button>
+          </li>
+        </ul>
       </section>
       <section id="order-summary">
         <h4>Order Summary</h4>
