wire up filter button

--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
       <ul id="filter" ><!-- Make individual filter red if  the input is invalid also delete the number if it's over bound then make the tab red then display error-->
         <li id="close-filter">
           <button>
-            - Close filter
+            Close Filter
+          </button>
+        </li>
+        <li id="open-filter">
+          <button>
+            Open Filter
           </button>
         </li>
         <li id="category-filter">
