--- a/index.html
+++ b/index.html
@@ -55,16 +55,13 @@
           </li>
         </ul>
       </nav>
+     
       <ul id="filter" ><!-- Make individual filter red if  the input is invalid also delete the number if it's over bound then make the tab red then display error-->
-        <li id="close-filter">
+        <li id="filter-toggle">
           <button>
             Close Filter
           </button>
         </li>
-        <li id="open-filter">
-          <button>
-            Open Filter
-          </button>
         </li>
         <li id="category-filter">
           <label for="categories">Categories</label>
