--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
      
       <ul id="filter" ><!-- Make individual filter red if  the input is invalid also delete the number if it's over bound then make the tab red then display error-->
         <li id="filter-toggle">
-          <button>
-            Close Filter
+          <button id="toggle-button">
+            Hide Filter
           </button>
         </li>
         </li>
