--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <button aria-hidden="true" type="button" class="hide">Menu</button>
     </header>
     <main id="home">
-      <button id="advanced-toggle">Advanced filter</button>
+      <button id="advanced-toggle">Show Advanced filter</button>
       <nav class="hide" aria-hidden="true">
         <ul>
           <li>
