Remove overflowing tags
Co-authored-by: @pmithapara <pmithapara@users.noreply.github.com>
Co-authored-by: @Juno-Explorer1 <Juno-Explorer1@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <button aria-hidden="true" type="button" class="hide">Menu</button>
     </header>
     <main id="home">
-      <button id="advanced-toggle">Show Advanced filter</button>
+      <button>Show Advanced filter</button>
       <nav class="hide" aria-hidden="true">
         <ul>
           <li>
@@ -55,10 +55,10 @@
           </li>
         </ul>
       </nav>
-     
+
       <ul id="filter" ><!-- Make individual filter red if  the input is invalid also delete the number if it's over bound then make the tab red then display error-->
-        <li id="filter-toggle">
-          <button id="toggle-button">
+        <li>
+          <button>
             Hide Filter
           </button>
         </li>
