--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
       </nav>
 
       <ul id="filter" ><!-- Make individual filter red if  the input is invalid also delete the number if it's over bound then make the tab red then display error-->
-        <li>
+        <li id="close-filter">
           <button>
-            Hide Filter
+            - Close filter
           </button>
         </li>
         </li>
