Add data id for item in item grid
Co-Authored-By: null <pmithapara@users.noreply.github.com>
Co-Authored-By: Alexei Pachecano <Juno-Explorer1@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </li>
       </ul>
       <ol id="item-grid" aria-label="Items">
-        <li>
+        <li data-id="1" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -115,7 +115,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="2" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -126,7 +126,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="3" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -137,7 +137,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="4" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -148,7 +148,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="5" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -159,7 +159,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="6" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -170,7 +170,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="7" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -181,7 +181,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="8" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -192,7 +192,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="9" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -203,7 +203,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="10" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -214,7 +214,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="11" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -225,7 +225,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="12" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -236,7 +236,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="13" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -247,7 +247,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="14" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -258,7 +258,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="15" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -269,7 +269,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="16" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -280,7 +280,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="17" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -291,7 +291,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="18" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -302,7 +302,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="19" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -313,7 +313,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="20" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -324,7 +324,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="21" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -335,7 +335,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="22" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -346,7 +346,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="23" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
@@ -357,7 +357,7 @@
           </p></a>
           <button>Add to Cart</button>
         </li>
-        <li>
+        <li data-id="24" >
           <figure>
             <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
