--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <ol id="item-grid" aria-label="Items">
         <li data-id="1" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/0396865d-bcb3-4d1f-9f6a-2a46676b1c12/sportswear-sport-essentials-mens-allover-print-pullover-hoodie-wRTRl3.png" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -117,7 +117,7 @@
         </li>
         <li data-id="2" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/fbdbfed7-40fa-463f-859a-84c7028df559/spring-mens-top-RHb2XN.png" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -128,7 +128,7 @@
         </li>
         <li data-id="3" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/04b441d1-380b-444f-918d-29b197c7b82d/sportswear-mens-shorts-08klZm.png" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -139,7 +139,7 @@
         </li>
         <li data-id="4" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/cn1lpic7hmc11azcxrhi/sportswear-club-mens-t-shirt-ShrJfX.png" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -150,7 +150,7 @@
         </li>
         <li data-id="5" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/de615f76-3320-45f0-8bd6-c2aaa1c1342b/sportswear-resort-mens-woven-flow-shorts-PCFSJ5.png" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -161,7 +161,7 @@
         </li>
         <li data-id="6" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/6beb3665-eb20-4c85-81fa-77a845605a1e/windrunner-mens-running-jacket-w6cgXz.png" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -172,7 +172,7 @@
         </li>
         <li data-id="7" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/7908c0aa-4c8d-4f90-ae5d-ae6f72724b5b/pro-dri-fit-womens-cropped-tank-clWpVJ.png" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -183,7 +183,7 @@
         </li>
         <li data-id="8" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/87b751a5-5093-4824-8019-c216058f6086/pro-dri-fit-womens-high-rise-pocket-leggings-XV2RSh.png" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -194,7 +194,7 @@
         </li>
         <li data-id="9" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/bd0b412c-b163-4ab9-afd7-251cbdb53f7d/dri-fit-swoosh-womens-medium-support-non-padded-sports-bra-2KD3m2.png" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -205,7 +205,7 @@
         </li>
         <li data-id="10" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/db95d535-5f11-4a4b-a6fa-7e3673c7d2cd/sportswear-womens-woven-shorts-c2cKBX.png" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -216,7 +216,7 @@
         </li>
         <li data-id="11" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/c2a2c3d6-b0f7-4444-8c9d-2d42c1c80748/sportswear-womens-washed-jersey-hoodie-plus-size-lxZmrw.png" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -227,7 +227,7 @@
         </li>
         <li data-id="12" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/3fea0ad3-99d7-408a-98d6-53e30ed56779/sportswear-womens-washed-jersey-shorts-plus-size-dvs6C2.png" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -238,7 +238,7 @@
         </li>
         <li data-id="13" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/f1809560b5374057a9abad2300839d39_9366/adidas_Designed_2_Move_3-Stripes_Primeblue_Shorts_Green_H55312_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -249,7 +249,7 @@
         </li>
         <li data-id="14" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/a098375eb12f4363bd62ac8300c5432d_9366/AEROREADY_Designed_To_Move_Sport_3-Stripes_Tee_White_GM2156_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -260,7 +260,7 @@
         </li>
         <li data-id="15" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/9c7058d8677742ac8519ac3f009cdcf4_9366/Tiro_21_Track_Pants_Black_GH7305_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -271,7 +271,7 @@
         </li>
         <li data-id="16" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/b87f7be790bb4b06a093aa07007bb908_9366/Badge_of_Sport_Tee_White_ED9606_01_laydown.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -282,7 +282,7 @@
         </li>
         <li data-id="17" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/e3670e3503b646d9b898ad270064bbca_9366/AEROREADY_Designed_2_Move_Woven_Sport_Shorts_Green_H30301_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -293,7 +293,7 @@
         </li>
         <li data-id="18" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/47d71c179ad845df97aeac05004f29f3_9366/Big_Logo_Shorts_Black_GT3018_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -304,7 +304,7 @@
         </li>
         <li data-id="19" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/41b72c46f57f486391ebad2400b3e72f_9366/Primegreen_Essentials_Warm-Up_Slim_Tapered_3-Stripes_Track_Pants_Black_H48447_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -315,7 +315,7 @@
         </li>
         <li data-id="20" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/2eb52e833b644f099180ac8401169eb3_9366/Own_the_Run_Tee_White_GJ9989_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -326,7 +326,7 @@
         </li>
         <li data-id="21" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/c55d61bfc03640d795b9ac8300407b8a_9366/Designed_to_Move_High-Rise_3-Stripes_3-4_Sport_Tights_Black_GL3985_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -337,7 +337,7 @@
         </li>
         <li data-id="22" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/25c141357c904026a1d0add700dc6f82_9366/Primeblue_SST_Track_Jacket_Red_HE9562_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -348,7 +348,7 @@
         </li>
         <li data-id="23" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/9f081356674948ca99f3ac820134738c_9366/Essentials_Loose_Logo_Tank_Top_White_GL0567_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
@@ -359,7 +359,7 @@
         </li>
         <li data-id="24" >
           <figure>
-            <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSIPjCg_9nSjbPBv_knQfFm-Wlljwwp_8Gk75_7N3hb5pz5H378bpFXz5GzWGUwDp-tmtAIMb5lYeV1usaGtlQqNEOVdEZPjyB9cEYSDHoGyvmbaFTdbxiK0Q0" alt="Nike shirt image"/><!-- Checkout srcset -->
+            <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/bb87be1d60c74eee81b1acfb012da722_9366/Essentials_Fleece_3-Stripes_Pants_Grey_GV6020_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
           </figure>
           <p>Nike Shirt</p>
           <p>$240</p>
