Add id for list items
Co-Authored-By: Alexei Pachecano <Juno-Explorer1@users.noreply.github.com>
Co-Authored-By: null <pmithapara@users.noreply.github.com>

--- a/cart/index.html
+++ b/cart/index.html
@@ -57,7 +57,7 @@
       <section id="shopping-cart">
         <h4>Cart</h4>
         <ul>
-          <li class="remove">
+          <li data-id="1" class="remove">
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/0396865d-bcb3-4d1f-9f6a-2a46676b1c12/sportswear-sport-essentials-mens-allover-print-pullover-hoodie-wRTRl3.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -73,7 +73,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="2" class="remove">
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/fbdbfed7-40fa-463f-859a-84c7028df559/spring-mens-top-RHb2XN.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -89,7 +89,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="3" class="remove">
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/04b441d1-380b-444f-918d-29b197c7b82d/sportswear-mens-shorts-08klZm.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -105,7 +105,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="4" class="remove">
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/cn1lpic7hmc11azcxrhi/sportswear-club-mens-t-shirt-ShrJfX.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -121,7 +121,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="5" class="remove">
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/de615f76-3320-45f0-8bd6-c2aaa1c1342b/sportswear-resort-mens-woven-flow-shorts-PCFSJ5.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -137,7 +137,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="6" class="remove">
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/6beb3665-eb20-4c85-81fa-77a845605a1e/windrunner-mens-running-jacket-w6cgXz.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -153,7 +153,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="7" class="remove">
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/7908c0aa-4c8d-4f90-ae5d-ae6f72724b5b/pro-dri-fit-womens-cropped-tank-clWpVJ.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -169,7 +169,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="8" class="remove">
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/87b751a5-5093-4824-8019-c216058f6086/pro-dri-fit-womens-high-rise-pocket-leggings-XV2RSh.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -185,7 +185,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="9" class="remove">
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/bd0b412c-b163-4ab9-afd7-251cbdb53f7d/dri-fit-swoosh-womens-medium-support-non-padded-sports-bra-2KD3m2.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -201,7 +201,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="10" class="remove">
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/db95d535-5f11-4a4b-a6fa-7e3673c7d2cd/sportswear-womens-woven-shorts-c2cKBX.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -217,7 +217,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="11" class="remove">
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/c2a2c3d6-b0f7-4444-8c9d-2d42c1c80748/sportswear-womens-washed-jersey-hoodie-plus-size-lxZmrw.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -233,7 +233,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="12" class="remove">
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/3fea0ad3-99d7-408a-98d6-53e30ed56779/sportswear-womens-washed-jersey-shorts-plus-size-dvs6C2.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -249,7 +249,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="13" class="remove">
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/f1809560b5374057a9abad2300839d39_9366/adidas_Designed_2_Move_3-Stripes_Primeblue_Shorts_Green_H55312_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -265,7 +265,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="14" class="remove">
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/a098375eb12f4363bd62ac8300c5432d_9366/AEROREADY_Designed_To_Move_Sport_3-Stripes_Tee_White_GM2156_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -281,7 +281,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="15" class="remove">
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/9c7058d8677742ac8519ac3f009cdcf4_9366/Tiro_21_Track_Pants_Black_GH7305_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -297,7 +297,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="16" class="remove">
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/b87f7be790bb4b06a093aa07007bb908_9366/Badge_of_Sport_Tee_White_ED9606_01_laydown.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -313,7 +313,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="17" class="remove">
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/e3670e3503b646d9b898ad270064bbca_9366/AEROREADY_Designed_2_Move_Woven_Sport_Shorts_Green_H30301_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -329,7 +329,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="18" class="remove">
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/47d71c179ad845df97aeac05004f29f3_9366/Big_Logo_Shorts_Black_GT3018_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -345,7 +345,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="19" class="remove">
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/41b72c46f57f486391ebad2400b3e72f_9366/Primegreen_Essentials_Warm-Up_Slim_Tapered_3-Stripes_Track_Pants_Black_H48447_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -361,7 +361,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="20" class="remove">
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/2eb52e833b644f099180ac8401169eb3_9366/Own_the_Run_Tee_White_GJ9989_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -377,7 +377,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="21" class="remove">
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/c55d61bfc03640d795b9ac8300407b8a_9366/Designed_to_Move_High-Rise_3-Stripes_3-4_Sport_Tights_Black_GL3985_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -393,7 +393,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="22" class="remove">
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/25c141357c904026a1d0add700dc6f82_9366/Primeblue_SST_Track_Jacket_Red_HE9562_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -409,7 +409,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="23" class="remove">
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/9f081356674948ca99f3ac820134738c_9366/Essentials_Loose_Logo_Tank_Top_White_GL0567_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
@@ -425,7 +425,7 @@
             <input type="number" />
             <button>-</button>
           </li>
-          <li class="remove">
+          <li data-id="24" class="remove">
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/bb87be1d60c74eee81b1acfb012da722_9366/Essentials_Fleece_3-Stripes_Pants_Grey_GV6020_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
